control-plane-security/istio/policies/outbound_traffic_policy.yaml
# Copyright 2020 IBM Corp.
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
spec:
  egress:
  - hosts:
    - "*/*"
  outboundTrafficPolicy:
    mode: ALLOW_ANY
