control-plane-security/istio/policies/authorization.yaml
# Copyright 2020 IBM Corp.
# SPDX-License-Identifier: Apache-2.0

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: connector-ingress-security
spec:
 selector:
   matchLabels:
     m4d.ibm.com/componentType: connector
 action: ALLOW
 rules:
 - from:
   - source:
        namespaces: ["control-plane namespace"]
